--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "react": "19.0.0-rc-7771d3a7-20240827",
     "react-dom": "19.0.0-rc-7771d3a7-20240827",
     "react-markdown": "^9.0.1",
+    "remark-breaks": "^4.0.0",
     "remark-gfm": "^4.0.0",
     "sonner": "^1.5.0",
     "swr": "^2.2.5",
